Added some more examples.